--- a/map.html
+++ b/map.html
@@ -245,14 +245,14 @@ https://www.w3schools.com/graphics/google_maps_reference.asp
       <div id ="map"></div>
     </div>
   </div>
-  <iframe
+  <!--<iframe
   src="https://player.twitch.tv/?channel=minjuni2848&parent=sunnyfive.net&muted=true"
   height="720"
   width="1280"
   frameborder="0"
   scrolling="no"
   allowfullscreen="true">
-</iframe>
+</iframe>-->
   
   <a href="https://api.twitch.tv/kraken/oauth2/authorize?response_type=code&client_id=t0m7bcvtee84igtp7lrd080gbno6uf&redirect_uri=https://sunnyfive.net/redirect.html&scope=user_read">aaaaaaa</a>
     <script>
