--- a/map.html
+++ b/map.html
@@ -90,8 +90,16 @@ https://www.w3schools.com/graphics/google_maps_reference.asp
       </div>
       <div id="transitSelector" class="transitSelector">
         <img id="train" src="./img/train2.png"class="transitImg">
+        <img id="track" src="./img/track.png"class="transitImg">
         <img id="youtube" src="./img/youtube.png" class="transitImg">
         <img id="twitch" src="./img/twitch.png" class="transitImg">
+        <img id="add" src="./img/add.png" style="margin: 7px auto; width: 25px;"">
+        <img id="minus" src="./img/minus.png" style="display: none; margin: 7px auto; width: 25px;">
+        <img id="animal" src="./img/lion.png" style="display: none;" class="transitImg">
+        <img id="beach" src="./img/beach.png" style="display: none;" class="transitImg">
+        <img id="port" src="./img/port.png" style="display: none;" class="transitImg">
+        <img id="airplane" src="./img/airplane.png" style="display: none;"" class="transitImg">
+        <img id="bridge" src="./img/bridge.png" style="display: none;"" class="transitImg">
       </div>
       <div id ="map"></div>
     </div>
