--- a/map.html
+++ b/map.html
@@ -36,19 +36,20 @@ https://www.w3schools.com/graphics/google_maps_reference.asp
   <div id="header" class="sHeader">
     <!--<div class="words words-1"> 애니메이션 효과--> 
 
-      <div class="words"></div>
-      <span style="font-size: 5vw;">&nbsp</span>
-      <span style="font-size: 5vw;">N</span>
-      <span style="font-size: 5vw;">O</span>
-      <span style="font-size: 5vw;">W</span>
-      <span style="font-size: 5vw;">H</span>
-      <span style="font-size: 5vw;">E</span>
-      <span style="font-size: 5vw;">R</span>
-      <span style="font-size: 5vw;">E</span>
+      <div class="words"></div> <!--애니메이션 효과--> 
+      <div style="line-height: 1;">
+      <span class="header_font" >&nbsp</span>
+      <span class="header_font">N</span>
+      <span class="header_font">O</span>
+      <span class="header_font">W</span>
+      <span class="header_font">H</span>
+      <span class="header_font">E</span>
+      <span class="header_font">R</span>
+      <span class="header_font">E</span></div>
     <div style="text-align: center;
     position: absolute;
     left: 40%;
-    top: 15%;">
+    top: 7%;">
     <div> 보고 싶은 도시를 검색해보세요</div>
     <!--<h3 id="title">Sunny5ive realtime camera map</h3>-->
    <!-- 패널리스트 검색 창<div id="input-form" style="display:none">
