update map, update type

--- a/map.html
+++ b/map.html
@@ -101,11 +101,14 @@ https://www.w3schools.com/graphics/google_maps_reference.asp
         <img id="port" src="./img/port.png" style="display: none;" class="transitImg">
         <img id="airplane" src="./img/airplane.png" style="display: none;"" class="transitImg">
         <img id="bridge" src="./img/bridge.png" style="display: none;"" class="transitImg">
+        <img id="walking" src="./img/walking.png" style="display: none;"" class="transitImg">
       </div>
       <div id ="map"></div>
     </div>
   </div>
   <div id="playerYT"></div>
+  <div>Icons made by <a href="https://www.flaticon.com/authors/monkik" title="monkik">monkik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+
   <!--<iframe
   src="https://player.twitch.tv/?channel=minjuni2848&parent=sunnyfive.net&muted=true"
   height="720"
