--- a/map.html
+++ b/map.html
@@ -27,7 +27,10 @@
 
   <body>
 
-
+    <div>
+      <p> <center> Number of visitors:</center> </p>
+      <center><img alt="Visitor counter" src="counter.php" /></center>
+      </div>
 
 <!--https://palpit.tistory.com/828
 https://www.w3schools.com/graphics/google_maps_reference.asp
