--- a/index.html
+++ b/index.html
@@ -125,8 +125,39 @@
     <div class="section-heading blur_test" style="font-size : 50px; position : relative; text-transform: uppercase; color:rgb(0, 0, 0); font-weight: bold;">Healthy Sunlight, Anytime, Anywhere</div>
           <!-- z-index, html 순서대로 나중에 불린 놈이 가장 위에 나타난다, z-index는 position 세팅 된 놈들끼리만 적용된다-->
 </section>
+<!--display: flex;  justify-content:center;  자식들 가운데정렬, 근데 화면 줄이면 양옆으로 가려짐, 부모에 text-aling center , 자식에 display inline-block 으로 해결-->
+<section style="background-image: linear-gradient(to bottom , rgb(255, 255, 233),rgb(255, 240, 193) )!important;" class="video bg-primary text-center"  id="video">
+  <h3 class="hideme2" style=" font-weight: 800;
+  margin-top: -120px;
+  /* margin-left: -10%; */
+  position: absolute; z-index: 1; color: black; font-size: 55px;">SUNNYFIVE's Features </h3>
+  <hr size="5">
+<div class="hideme3" style="padding-right:400px; text-align: center; width:100%;">
+  <div class="scale features">
+  <video style="border-radius: 7px; " src="./img/sunny.mp4" type="video/mp4" poster="img/clabfair.png" width="320px" height="180px" autoplay loop muted playsinline ></video>
+  <p style="font-weight: bold; padding-top: 10px;">Sunlight moving according to the Day Cycle</p>
+</div>
+  <div class="scale features">
+    <video style="border-radius: 7px; " src="./img/temperature.mp4" type="video/mp4" poster="img/clabfair.png" width="320px" height="180px" autoplay loop muted playsinline ></video>
+    <p style="font-weight: bold; padding-top: 10px;">Full spectrum sunlight colors from dawn to sunset</p>
+  </div>
+  <div class="scale features">
+    <video style="border-radius: 7px; " src="./img/sunny2.mp4" type="video/mp4" poster="img/clabfair.png" width="320px" height="180px" autoplay loop muted playsinline ></video>
+    <p style="font-weight: bold; padding-top: 10px;">IoT-based Home Automation with various scenarios</p>
+  </div>
+  <div class="scale features">
+    <video style="border-radius: 7px; " src="./img/sunny3.mp4" type="video/mp4" poster="img/clabfair.png" width="320px" height="180px" autoplay loop muted playsinline ></video>
+    <p style="font-weight: bold; padding-top: 10px;">Set up a beautiful sky outside the window</p>
+  </div>
+</div>
+  <p></p>
+  <div class="badges">
 
+  </div>
 
+</section>
+
+<!--
   <section style="display: flex;  justify-content:center; background-image: linear-gradient(to bottom , rgb(255, 255, 233),rgb(255, 240, 193) )!important;" class="video bg-primary text-center"  id="video">
     <h3 class="hideme2" style=" font-weight: 800;
     margin-top: -120px;
@@ -163,16 +194,16 @@
     </div>
   </div>
     <p></p>
-    <div class="badges">
+    <div class="badges">-->
      <!-- <a class="badge-link" href="#"><img src="img/google-play-badge.svg" alt=""></a>
       <a class="badge-link" href="#"><img src="img/app-store-badge.svg" alt=""></a>-->
-    </div>
+    <!--</div> -->
     <!--<div class="overlay"></div>-->
     
           <!-- z-index, html 순서대로 나중에 불린 놈이 가장 위에 나타난다, z-index는 position 세팅 된 놈들끼리만 적용된다-->
-</section>
+<!--</section>-->
 
-<section class="raemian bg-primary text-center"  id="raemian">
+<section class="raemian bg_gradient text-center hideme"  id="raemian">
 
   <p></p>
   <div class="badges">
