--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 </section>
 <!--display: flex;  justify-content:center;  자식들 가운데정렬, 근데 화면 줄이면 양옆으로 가려짐, 부모에 text-aling center , 자식에 display inline-block 으로 해결-->
 <section style="background-image: linear-gradient(to bottom , rgb(255, 255, 233),rgb(255, 240, 193) )!important;" class="video bg-primary text-center"  id="video">
-  <h3 class="hideme2" style=" font-weight: 800;
+  <h3 class="hideme2" style=" font-weight: 800; margin-left: 15px;
   margin-top: -120px;
   /* margin-left: -10%; */
   position: absolute; z-index: 1; color: black; font-size: 55px;">SUNNYFIVE's Features </h3>
@@ -203,7 +203,10 @@
           <!-- z-index, html 순서대로 나중에 불린 놈이 가장 위에 나타난다, z-index는 position 세팅 된 놈들끼리만 적용된다-->
 <!--</section>-->
 
-<section class="raemian bg_gradient text-center hideme"  id="raemian">
+<section class="raemian bg_gradient 
+
+
+text-center hideme"  id="raemian">
 
   <p></p>
   <div class="badges">
@@ -229,7 +232,7 @@
 
   </div>
   -->
-  <div style="position:absolute;
+  <div class="hideme" style="position:absolute;
   font-size: 46px !important;
   color: white;
   z-index: 1;
@@ -238,16 +241,16 @@
   color: white;
   padding: 4%;
   margin-top:5%">
-    <h2 style="font-size: 50px;
+    <h2 class="hideme" style="font-size: 50px;
     max-width: 100%;
     margin-top: 0;
     font-weight: bolder;
     margin-bottom: 35px;">History</h2>
-    <h5 class="divh2">2019.03 Samsung Electronics, C-Lab, Start with SunnySide</h5>
-    <h5 class="divh2">2019.10 Development of Prototype and Exhibition of Samsung C&T Raemian Gallery</h5>
-    <h5 class="divh2">2019.11 Samsung Electronics, C-Lab Fair Exhibition</h5>
-    <h5 class="divh2">2020.01 CES 2020 Eureka Park Exhibition</h5>
-    <h5 class="divh2">2020.06 Samsung Electronics Spin-off Company, Sunny Five Establishment</h5>
+    <h5 class="divh2 hideme">2019.03 Samsung Electronics, C-Lab, Start with SunnySide</h5>
+    <h5 class="divh2 hideme">2019.10 Development of Prototype and Exhibition of Samsung C&T Raemian Gallery</h5>
+    <h5 class="divh2 hideme">2019.11 Samsung Electronics, C-Lab Fair Exhibition</h5>
+    <h5 class="divh2 hideme">2020.01 CES 2020 Eureka Park Exhibition</h5>
+    <h5 class="divh2 hideme">2020.06 Samsung Electronics Spin-off Company, Sunny Five Establishment</h5>
   </div>
   <section class="cta" id="cta">
     <div class="cta-content">
@@ -269,7 +272,7 @@
             <div class="col-lg-6">
               <p style="text-align: left;" class="section">SunnyFive CEO, Minjun Kim</p>
               <p style="text-align: left;" class="section">Email : sunnyfive@sunnyfive.net</p>
-              <p style="text-align: left;" class="section">Phone : +82-10-4120-0042</p>
+              <p style="text-align: left;" class="section">Phone : +82-02-459-0045</p>
               <p style="text-align: left;" class="section">Address : ASIA ICT 205, 4, Jagok-ro 7-gil, Gangnam-gu, Seoul, Republic of Korea</p>
               </div>
 
