--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <a class="nav-link js-scroll-trigger" href="#download">Sunny Five</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#cta">History</a>
+            <a class="nav-link js-scroll-trigger" href="#features.html">Features</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#features">Members</a>
@@ -102,18 +102,14 @@
   </nav>
 
  
+<section  class="description bg-primary text-center"  id="description">
+  <div class="section-heading blur_test" style="font-size : 50px; position : relative; text-transform: uppercase; color:rgb(0, 0, 0); font-weight: bold;">Healthy Sunlight, Anytime, Anywhere</div>
+  <div class="badges">
 
-  <section style="background-image: linear-gradient(to bottom right, rgb(255, 217, 91), rgb(255, 255, 233))!important;" class="download bg-primary text-center "  id="download">
+  </div>
 
-          <p></p>
-          <div class="badges">
-           <!-- <a class="badge-link" href="#"><img src="img/google-play-badge.svg" alt=""></a>
-            <a class="badge-link" href="#"><img src="img/app-store-badge.svg" alt=""></a>-->
-          </div>
-          <!--<div class="overlay"></div>-->
-          <div class="section-heading blur_test" style="font-size : 50px; position : relative; text-transform: uppercase; color:rgb(0, 0, 0); font-weight: bold;">Healthy Sunlight, Anytime, Anywhere</div>
-                <!-- z-index, html 순서대로 나중에 불린 놈이 가장 위에 나타난다, z-index는 position 세팅 된 놈들끼리만 적용된다-->
-  </section>
+</section>
+
   <section class="download bg-primary text-center fadein"  id="download">
 
     <p></p>
@@ -122,40 +118,21 @@
       <a class="badge-link" href="#"><img src="img/app-store-badge.svg" alt=""></a>-->
     </div>
     <!--<div class="overlay"></div>-->
-    <div class="section-heading blur_test" style="font-size : 50px; position : relative; text-transform: uppercase; color:rgb(0, 0, 0); font-weight: bold;">Healthy Sunlight, Anytime, Anywhere</div>
+    <div class="hideme2">
+    <h2>Sunlight For You, Anytime, Anywhere</h2>
+    <h3> </h3>
+
+    <h3> SunnySide is a window shaped lighting device that produces artificial sunlight.</h3>
+    <h3>You can enjoy beautiful sunlight that changes every hour by copying full spectrum of sunlight</h3>
+    <h3>and you can also produce vitamin D in your skin by sunbathing indoors without worring about aging or tanning.</h3>
+    <h3> The bright sunlight we made is also helpful to make you happy.</h3>
+  </div>
           <!-- z-index, html 순서대로 나중에 불린 놈이 가장 위에 나타난다, z-index는 position 세팅 된 놈들끼리만 적용된다-->
 </section>
 <!--display: flex;  justify-content:center;  자식들 가운데정렬, 근데 화면 줄이면 양옆으로 가려짐, 부모에 text-aling center , 자식에 display inline-block 으로 해결-->
-<section style="background-image: linear-gradient(to bottom , rgb(255, 255, 233),rgb(255, 240, 193) )!important;" class="video bg-primary text-center"  id="video">
-  <h3 class="hideme2" style=" font-weight: 800; margin-left: 15px;
-  margin-top: -120px;
-  /* margin-left: -10%; */
-  position: absolute; z-index: 1; color: black; font-size: 55px;">SUNNYFIVE's Features </h3>
-  <hr size="5">
-<div class="hideme3" style="padding-right:400px; text-align: center; width:100%;">
-  <div class="scale features">
-  <video style="border-radius: 7px; " src="./img/sunny.mp4" type="video/mp4" poster="img/clabfair.png" width="320px" height="180px" autoplay loop muted playsinline ></video>
-  <p style="font-weight: bold; padding-top: 10px;">Sunlight moving according to the Day Cycle</p>
-</div>
-  <div class="scale features">
-    <video style="border-radius: 7px; " src="./img/temperature.mp4" type="video/mp4" poster="img/clabfair.png" width="320px" height="180px" autoplay loop muted playsinline ></video>
-    <p style="font-weight: bold; padding-top: 10px;">Full spectrum sunlight colors from dawn to sunset</p>
-  </div>
-  <div class="scale features">
-    <video style="border-radius: 7px; " src="./img/sunny2.mp4" type="video/mp4" poster="img/clabfair.png" width="320px" height="180px" autoplay loop muted playsinline ></video>
-    <p style="font-weight: bold; padding-top: 10px;">IoT-based Home Automation with various scenarios</p>
-  </div>
-  <div class="scale features">
-    <video style="border-radius: 7px; " src="./img/sunny3.mp4" type="video/mp4" poster="img/clabfair.png" width="320px" height="180px" autoplay loop muted playsinline ></video>
-    <p style="font-weight: bold; padding-top: 10px;">Set up a beautiful sky outside the window</p>
-  </div>
-</div>
-  <p></p>
-  <div class="badges">
-
-  </div>
 
 </section>
+
 
 <!--
   <section style="display: flex;  justify-content:center; background-image: linear-gradient(to bottom , rgb(255, 255, 233),rgb(255, 240, 193) )!important;" class="video bg-primary text-center"  id="video">
@@ -232,36 +209,7 @@ text-center hideme"  id="raemian">
 
   </div>
   -->
-  <div class="hideme" style="position:absolute;
-  font-size: 46px !important;
-  color: white;
-  z-index: 1;
-  position: absolute;
-  font-family: 'Catamaran', 'Helvetica', 'Arial', 'sans-serif';
-  color: white;
-  padding: 4%;
-  margin-top:5%">
-    <h2 class="hideme" style="font-size: 50px;
-    max-width: 100%;
-    margin-top: 0;
-    font-weight: bolder;
-    margin-bottom: 35px;">History</h2>
-    <h5 class="divh2 hideme">2019.03 Samsung Electronics, C-Lab, Start with SunnySide</h5>
-    <h5 class="divh2 hideme">2019.10 Development of Prototype and Exhibition of Samsung C&T Raemian Gallery</h5>
-    <h5 class="divh2 hideme">2019.11 Samsung Electronics, C-Lab Fair Exhibition</h5>
-    <h5 class="divh2 hideme">2020.01 CES 2020 Eureka Park Exhibition</h5>
-    <h5 class="divh2 hideme">2020.06 Samsung Electronics Spin-off Company, Sunny Five Establishment</h5>
-  </div>
-  <section class="cta" id="cta">
-    <div class="cta-content">
-      <div class="container">
-        <!--<h2>Stop waiting.<br>Start building.</h2>
-        <a href="#contact" class="btn btn-outline btn-xl js-scroll-trigger">Let's Get Started!</a>-->
 
-      </div>
-    </div>
-    <div class="overlay"></div>
-  </section>
 
 
   <section class="contact bg-primary" id="contact">
