--- a/history.html
+++ b/history.html
@@ -76,10 +76,13 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#download">Sunny Five</a>
+            <a class="nav-link js-scroll-trigger" href="index.html">Sunny Five</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#cta">History</a>
+            <a class="nav-link js-scroll-trigger" href="features.html">Features</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="history.html">History</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#features">Members</a>
@@ -100,6 +103,25 @@
       </div>
     </div>
   </nav>
+
+
+
+
+
+
+
+
+
+
+  
+
+
+
+
+
+
+
+
 
  
 <section  class="description bg-primary text-center"  id="description">
