--- a/index.html
+++ b/index.html
@@ -79,7 +79,10 @@
             <a class="nav-link js-scroll-trigger" href="#download">Sunny Five</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#features.html">Features</a>
+            <a class="nav-link js-scroll-trigger" href="features.html">Features</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="./timeline/index.html">History</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#features">Members</a>
