--- a/board.html
+++ b/board.html
@@ -34,6 +34,10 @@
 
   <!-- Custom styles for this template -->
   <link href="css/new-age.css" rel="stylesheet">
+  <link rel="icon" 
+  type="image/png" 
+  href="/img/bgjh.JPG" />
+
 
 
   <style>
@@ -61,9 +65,10 @@
 
 
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+  <nav class="navbar navbar-expand-lg navbar-light fixed-top navbar-shrink stage" id="mainNav">
     <div class="container" style="margin-left: 0;">
-      <a class="navbar-brand js-scroll-trigger navbar-board" href="./index.html#page-top">Sunny Five</a>
+      <a style="display:none;" class="navbar-brand js-scroll-trigger" href="#page-top">SUNNYFIVE</a>
+      <img style="max-width: 215px; max-height: 68px;" src="./img/sf_logo.png"></img>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -71,25 +76,28 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger navbar-board" href="./index.html#download">Sunny Side</a>
+            <a class="nav-link js-scroll-trigger" href="#download">Sunny Five</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger navbar-board" href="./index.html#cta">History</a>
+            <a class="nav-link js-scroll-trigger" href="features.html">Features</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger navbar-board" href="./index.html#features">Members</a>
+            <a class="nav-link js-scroll-trigger" href="timeline.html">History</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger navbar-board" href="./index.html#contact">Contact</a>
+            <a class="nav-link js-scroll-trigger" href="#features">Members</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger navbar-board" href="board.html">공 고</a>
+            <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger navbar-board" href="news.html">보도 자료</a>
+            <a class="nav-link js-scroll-trigger" href="board.html">Announcement</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="news.html">Related News</a>
           </li>
           <li style = "display:none"  class="nav-item">
-            <a class="nav-link js-scroll-trigger navbar-board" href="map.html">Map</a>
+            <a class="nav-link js-scroll-trigger" href="map.html">Map</a>
           </li>
         </ul>
       </div>
@@ -100,7 +108,7 @@
     <div class="container h-auto" >
       
       
-      <div class="col-lg-9 my-auto" style="z-index: 10000; max-width:100%">
+      <div class="col-lg-9 my-auto" style="z-index: 1; max-width:100%">
         <!--<div class="header-content mx-auto" style="width:80%">-->
         <div class="header-content mx-auto" >  
           <!--<a href="#download" style="position:absolute; " class="mb-4 btn btn-outline btn-xl js-scroll-trigger text-blur-out">SunnyFive</a>
