--- a/features.html
+++ b/features.html
@@ -82,7 +82,7 @@
             <a class="nav-link js-scroll-trigger" href="features.html">Features</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="./timeline/index.html">History</a>
+            <a class="nav-link js-scroll-trigger" href="timeline.html">History</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#features">Members</a>
@@ -116,7 +116,7 @@
 
 </div>-->
 
-<div class="text_align">
+<div class="text_align" style="margin-top:80px">
   <div class="section-heading blur_test3 blur_test_font" >Sunlight moving according to the Day Cycle</div>
 
 <video class="video_wrap2"   src="./img/sunny_stb.mp4" type="video/mp4" poster="img/clabfair.png" width="320px" height="180px" autoplay loop muted playsinline ></video>
