--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <a class="nav-link js-scroll-trigger" href="features.html">Features</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="./timeline/index.html">History</a>
+            <a class="nav-link js-scroll-trigger" href="timeline.html">History</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#features">Members</a>
@@ -122,13 +122,13 @@
     </div>
     <!--<div class="overlay"></div>-->
     <div class="hideme2">
-    <h2>Sunlight For You, Anytime, Anywhere</h2>
+    <h2 class="blur_test5">Sunlight For You, Anytime, Anywhere</h2>
     <h3> </h3>
 
-    <h3> SunnySide is a window shaped lighting device that produces artificial sunlight.</h3>
-    <h3>You can enjoy beautiful sunlight that changes every hour by copying full spectrum of sunlight</h3>
-    <h3>and you can also produce vitamin D in your skin by sunbathing indoors without worring about aging or tanning.</h3>
-    <h3> The bright sunlight we made is also helpful to make you happy.</h3>
+    <h3 class="blur_test5"> SunnySide is a window shaped lighting device that produces artificial sunlight.</h3>
+    <h3 class="h3r">You can enjoy beautiful sunlight that changes every hour by copying full spectrum of sunlight</h3>
+    <h3 class="h3r">and you can also produce vitamin D in your skin by sunbathing indoors without worring about aging or tanning.</h3>
+    <h3 class="h3r"> The bright sunlight we made is also helpful to make you happy.</h3>
   </div>
           <!-- z-index, html 순서대로 나중에 불린 놈이 가장 위에 나타난다, z-index는 position 세팅 된 놈들끼리만 적용된다-->
 </section>
