--- a/news.html
+++ b/news.html
@@ -71,25 +71,28 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger navbar-board" href="./index.html#download">Sunny Side</a>
+            <a class="nav-link js-scroll-trigger" href="#download">Sunny Five</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger navbar-board" href="./index.html#cta">History</a>
+            <a class="nav-link js-scroll-trigger" href="features.html">Features</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger navbar-board" href="./index.html#features">Members</a>
+            <a class="nav-link js-scroll-trigger" href="timeline.html">History</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger navbar-board" href="./index.html#contact">Contact</a>
+            <a class="nav-link js-scroll-trigger" href="#features">Members</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger navbar-board" href="board.html">공 고</a>
+            <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger navbar-board" href="news.html">보도 자료</a>
+            <a class="nav-link js-scroll-trigger" href="board.html">Announcement</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="news.html">Related News</a>
           </li>
           <li style = "display:none"  class="nav-item">
-            <a class="nav-link js-scroll-trigger navbar-board" href="map.html">Map</a>
+            <a class="nav-link js-scroll-trigger" href="map.html">Map</a>
           </li>
         </ul>
       </div>
