--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <a class="nav-link js-scroll-trigger" href="timeline.html">History</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#features">Members</a>
+            <a class="nav-link js-scroll-trigger" href="members.html">Members</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
@@ -105,7 +105,7 @@
   </nav>
 
  
-<section  class="description bg-primary text-center"  id="description">
+<section  class="description  text-center"  id="description">
   <div class="section-heading blur_test" style="font-size : 50px; position : relative; text-transform: uppercase; color:rgb(0, 0, 0); font-weight: bold;">Healthy Sunlight, Anytime, Anywhere</div>
   <div class="badges">
 
@@ -113,7 +113,7 @@
 
 </section>
 
-  <section class="download bg-primary text-center fadein"  id="download">
+  <section class="download  text-center fadein"  id="download">
 
     <p></p>
     <div class="badges">
@@ -215,7 +215,7 @@ text-center hideme"  id="raemian">
 
 
 
-  <section class="contact bg-primary" id="contact">
+  <section class="contact " id="contact">
     <div class="container">
       <div class="col-lg-12 my-auto">
         <div class="container-fluid">
