--- a/news.html
+++ b/news.html
@@ -61,9 +61,10 @@
 
 
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+  <nav class="navbar navbar-expand-lg navbar-light fixed-top navbar-shrink stage" id="mainNav">
     <div class="container" style="margin-left: 0;">
-      <a class="navbar-brand js-scroll-trigger navbar-board" href="./index.html#page-top">Sunny Five</a>
+      <a style="display:none;" class="navbar-brand js-scroll-trigger" href="#page-top">SUNNYFIVE</a>
+      <img style="max-width: 215px; max-height: 68px;" src="./img/sf_logo.png"></img>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -71,7 +72,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#download">Sunny Five</a>
+            <a class="nav-link js-scroll-trigger" href="index.html">Sunny Five</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="features.html">Features</a>
@@ -592,15 +593,15 @@ showBoardLists();
     
 
 
-  <section class="contact bg-primary" id="contact">
+  <section class="contact " id="contact">
     <div class="container">
       <div class="col-lg-12 my-auto">
         <div class="container-fluid">
           <div class="row">
             <div class="col-lg-6">
               <p style="text-align: left;" class="section">SunnyFive CEO, Minjun Kim</p>
-              <p style="text-align: left;" class="section">Email : mj@sunnyfive.net</p>
-              <p style="text-align: left;" class="section">Phone : +82-10-4120-0042</p>
+              <p style="text-align: left;" class="section">Email : sunnyfive@sunnyfive.net</p>
+              <p style="text-align: left;" class="section">Phone : +82-02-459-0045</p>
               <p style="text-align: left;" class="section">Address : ASIA ICT 205, 4, Jagok-ro 7-gil, Gangnam-gu, Seoul, Republic of Korea</p>
               </div>
 
@@ -637,7 +638,7 @@ showBoardLists();
 
   <footer>
     <div class="container">
-      <p>&copy; Your Website 2019. All Rights Reserved.</p>
+      <p>&copy; COPYRIGHT (C) Sunnyfive. All Rights Reserved.</p>
       <ul class="list-inline">
         <li class="list-inline-item">
           <a href="#">Privacy</a>
