--- a/map.html
+++ b/map.html
@@ -89,9 +89,10 @@ https://www.w3schools.com/graphics/google_maps_reference.asp
     <div id ="best_list"></div>
     <div id="noList">There is no Live Camera in this area</div>
     <div id = "yt">
-      <div id = "video" style ="display:none">
+      <!--<div id = "video" style ="display:none">
         <iframe width="100%" height="100%" src="https://www.youtube.com/embed/eE6VVJ3hvv8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-      </div>
+      </div>/*패널리스트 빼면서 빈자리가 생기고 그걸 메꾸기 위해서 */--> 
+      <div id = "video"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/eE6VVJ3hvv8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
       <div id="transitSelector" class="transitSelector">
         <img id="train" src="./img/train2.png"class="transitImg">
         <img id="track" src="./img/track.png"class="transitImg">
