--- a/map.html
+++ b/map.html
@@ -122,8 +122,9 @@ https://www.w3schools.com/graphics/google_maps_reference.asp
   allowfullscreen="true">
 </iframe>-->
   
+<!--트위치 인증받는 코드
   <a href="https://api.twitch.tv/kraken/oauth2/authorize?response_type=code&client_id=t0m7bcvtee84igtp7lrd080gbno6uf&redirect_uri=https://sunnyfive.net/redirect.html&scope=user_read">aaaaaaa</a>
-   
+   -->
 
     <!--Load the API from the specified URL
 
