--- a/map.html
+++ b/map.html
@@ -39,8 +39,8 @@ https://www.w3schools.com/graphics/google_maps_reference.asp
   <div id="header" class="sHeader">
     <!--<div class="words words-1"> 애니메이션 효과--> 
 
-      <div class="words"></div> <!--애니메이션 효과--> 
-      <div style="line-height: 1;">
+      <!--<div class="words"></div> 애니메이션 효과--> 
+      <div style="line-height: 1; margin-top: 15px;">
       <span class="header_font" >&nbsp</span>
       <span class="header_font">N</span>
       <span class="header_font">O</span>
